<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/gridview_recipes"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:numColumns="1"
android:columnWidth="@dimen/grid_item_recipe_width"
android:verticalSpacing="@dimen/grid_item_recipe_spacing"
android:horizontalSpacing="@dimen/grid_item_recipe_spacing"
android:padding="@dimen/grid_item_recipe_spacing"
android:drawSelectorOnTop="true"
android:scrollbars="vertical"/>


